--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         /*Update style sheet to match download location of this file*/
-        <link rel="stylesheet" href="\styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     
       <title>Mangata & Gallo</title>
     </head>
