--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
       <div class="video-banner">
         <video autoplay muted loop poster="https://github.com/c-mccall1031/photogallery/blob/main/images/AdobeStock_410140307.jpeg?raw=true">
-          <source src="https://v.ftcdn.net/04/10/14/06/700_F_410140625_fE903ypO3Ft0HsXGW1dQSOhVsq3GZ9W5_ST.mp4" type="video/mp4" alt="engagement ring presented in red heart box">
+          <source src="images/AdobeStock_410140625.mp4" type="video/mp4" alt="engagement ring presented in red heart box">
           Your browser does not support the video tag.
         </video>
         
